force-app/main/default/objects/Action_Item__c/Action_Item__c.object-meta.xml
<CustomObject>
    <description>Project Action Items</description>
    <label>Action Item</label>
    <nameField>
        <displayFormat>AI-{000}</displayFormat>
        <label>Action Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>