force-app/main/default/objects/Action_Item__c/fields/Action_Item_Detail__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_Detail__c</fullName>
    <label>Action Item Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>