force-app/main/default/objects/Action_Item__c/fields/Assigned_To_Non_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Non_User__c</fullName>
    <inlineHelpText>Use this field to assign action items to non SF users</inlineHelpText>
    <label>Assigned To (non SF)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>