force-app/main/default/objects/Action_Item__c/fields/Config_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Config_Adjustment__c</fullName>
    <description>Status of any adjustment to the configuration required by the results of this Action Item</description>
    <label>Config Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>