force-app/main/default/objects/Action_Item__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>