force-app/main/default/objects/Action_Item__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>TEXT(Detailed_Requirement__r.Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>