force-app/main/default/objects/Action_Item__c/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Project Issue</inlineHelpText>
    <label>Related Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>