force-app/main/default/objects/Action_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Open</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>1 - Open</label>
            </value>
            <value>
                <fullName>2 - Pending</fullName>
                <color>#FFFF66</color>
                <label>2 - Pending</label>
            </value>
            <value>
                <fullName>3 - Closed</fullName>
                <color>#57F17C</color>
                <label>3 - Closed</label>
            </value>
            <value>
                <fullName>4 - Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>