force-app/main/default/objects/Action_Item__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows linking of Action Items to Test Cases</description>
    <inlineHelpText>Identify the Test Case associated to this Action Item (if any)</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>